posiGen_FullsendBox/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Cost_Method__c</fullName>
        <label>Cost Method</label>
        <picklist>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIFO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Inventory (Sales only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchasing_Unit__c</fullName>
        <label>Purchasing Unit</label>
        <picklist>
            <picklistValues>
                <fullName>list units of measure setup in Intacct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ratio_to_OE_Standard__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Ratio to OE Standard</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ratio_to_PO_Standard__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Ratio to PO Standard</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Unit__c</fullName>
        <label>Sales Unit</label>
        <picklist>
            <picklistValues>
                <fullName>list units of measure setup in Intacct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Standard_Unit__c</fullName>
        <label>Standard Unit</label>
        <picklist>
            <picklistValues>
                <fullName>list units of measure setup in Intacct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>box__FolderId__c</fullName>
        <label>FolderId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Cost_Method__c</columns>
        <columns>Item_Type__c</columns>
        <columns>Purchasing_Unit__c</columns>
        <columns>Ratio_to_OE_Standard__c</columns>
        <columns>Ratio_to_PO_Standard__c</columns>
        <columns>Sales_Unit__c</columns>
        <columns>Standard_Unit__c</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>Intacct_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Cost_Method__c</columns>
        <columns>Item_Type__c</columns>
        <columns>Purchasing_Unit__c</columns>
        <columns>Ratio_to_OE_Standard__c</columns>
        <columns>Ratio_to_PO_Standard__c</columns>
        <columns>Sales_Unit__c</columns>
        <columns>Standard_Unit__c</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Item_Type__c</field>
            <operation>equals</operation>
            <value>Inventory</value>
        </filters>
        <label>Intacct Products</label>
    </listViews>
</CustomObject>